# local-platy

./: .gitignore  NOTICE  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model.rs
src-tauri/src/model/: commands.rs  handlers.rs  mod.rs  thread.rs
src/components/ChatHistory/: ChatHistory.css  ChatHistory.tsx  ChatHistoryItem.tsx
src/components/ChatPrompt/: ChatPrompt.css  ChatPrompt.tsx
